<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_album"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:adjustViewBounds="true"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/horass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horas"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutos"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guidelinerelojarriba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />

    <TextView
        android:id="@+id/segundos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/segundos"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guidelinerelojabajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guidelinerelojarriba" />

    <!-- android:text="@string/hora_default"
        Texto de TextView Reloj
    -->

    <TextView
        android:id="@+id/Reloj"
        android:layout_width="164dp"
        android:layout_height="78dp"
        android:layout_margin="25dp"
        android:gravity="center"

        android:textAlignment="center"

        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guidelinerelojarriba"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btn_hr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/IB_menos_hr"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:contentDescription="@string/minus"
            android:src="@drawable/minus"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/IB_mas_hr"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:contentDescription="@string/plus"
            android:src="@drawable/plus"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_min"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_margin="3dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guidelinerelojarriba"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline19">

        <ImageButton
            android:id="@+id/IB_menos_min"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:src="@drawable/minus"
            android:contentDescription="@string/minus"
            />

        <ImageButton
            android:id="@+id/IB_mas_min"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:src="@drawable/plus"
            android:contentDescription="@string/plus"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_seg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guidelinerelojabajo"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guidelinerelojarriba">

        <ImageButton
            android:id="@+id/IB_menos_seg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:src="@drawable/minus"
            android:contentDescription="@string/minus"
            />

        <ImageButton
            android:id="@+id/IB_mas_seg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:src="@drawable/plus"
            android:contentDescription="@string/plus"
            />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/formato"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guidelinerelojabajo"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guidelinerelojarriba">

        <RadioButton
            android:id="@+id/hr_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hora1"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/hr_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hora2"
            android:textSize="24sp" />

    </RadioGroup>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guidelinerelojabajo">

        <ImageView
            android:id="@+id/Album_normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo" />

    </FrameLayout>

    <TextView
        android:id="@+id/Nombre_imagen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="@string/prueba"
        android:textAlignment="center"
        android:textColor="@color/black"

        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guideline18">

    </TextView>

    <Button
        android:id="@+id/Siguiente"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"

        android:text="@string/siguiente"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline16"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/Anterior"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"


        android:layout_weight="1"
        android:text="@string/anterior"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guideline16"
        app:layout_constraintVertical_bias="1.0">

    </Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".89" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinerelojabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinerelojarriba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1" />


</androidx.constraintlayout.widget.ConstraintLayout>